# eco_legacy-2

./: .env  .gitignore  App.js  Cargo.toml  Dockerfile  README.md  api.rs  app.json  canister_ids.json  dfx.json  eco_legacy.db  eco_legacy.did  icService.js  openapi.json  package-lock.json  package.json  schema.sql  test.rs
.dfx - Copy/ic/canisters/eco_legacy/: eco_legacy.wasm  index.js  service.did.d.ts  service.did.js
.dfx - Copy/local/: canister_ids.json  network-id
.dfx - Copy/local/canisters/eco_legacy/: eco_legacy.wasm
.dfx/local/: canister_ids.json  network-id  wallets.json
.dfx/local/canisters/eco_legacy/: service.did  service.did.d.ts  service.did.js
.dfx/network/local/: ic-canister-http-config.json  ic-canister-http-socket-path  network-id  replica-effective-config.json
.dfx/network/local/state/replicated_state/: ic.json5  nns_public_key.pem  registry.proto
.git - Copy/: FETCH_HEAD  ORIG_HEAD  config  index
.git - Copy/logs/: HEAD
.git - Copy/logs/refs/heads/: main
.git - Copy/refs/remotes/origin/: main  master
android/: settings.gradle
android/app/: build.gradle
eco-legacy-frontend/: package-lock.json  package.json
eco_legacy - Copy/: Cargo.toml  README.md  dfx.json  package-lock.json
frontend/src/: App.js
navigation/: AppNavigator.js
screens/: ChatScreen.js  MainScreen.js  NextScreen.js  ProjectScreen.js  RegisterScreen.js  TranslationScreen.js  WelcomeScreen.js
src/: db.rs  eco_legacy.did  error.rs  lib.rs  lib_logic.rs  main.rs  models.rs
src/src/tests/: api.test.js
src/tests/: eco_legacy_tests.rs  integration_tests.rs
swagger-editor/: openapi.yaml  package-lock.json  package.json  server.js  swagger.html
swagger-editor/routes/: api.js  index.js
swagger-editor/swagger-ui-server/: package-lock.json  package.json  routes
tests/: mod.rs
(+26 files in other folders)
