[package]
name = "eco_legacy"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5"
bcrypt = "0.12"
jsonwebtoken = "8.3"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
diesel = { version = "2.1", features = ["sqlite"] }
dotenv = "0.15"
ipfs-api = "0.4"  # Hypothetical crate for IPFS interaction
ic-cdk = "0.2"    # Hypothetical crate for ICP interaction

[lib]
name = "eco_legacy"
path = "src/lib_logic.rs"
crate-type = ["cdylib"]

[[bin]]
name = "eco_legacy_bin"
path = "src/main.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
