[package]
name = "eco_legacy"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
ic-cdk = "0.7"
ic-cdk-macros = "0.7"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"

 [lib]
  name = "eco_legacy"
 path = "src/lib.rs"
     